# fimsh-type

./: Cargo.toml  ex.txt
src/: app.rs  config.rs  main.rs
