[package]
name = "fimsh-type"
version = "0.1.0"
edition = "2021"
authors = ["Tymek Lewandowski"]
description = "A terminal typing speed test build in rust Blazigly fast"
homepage = "http://fimsh.com"
repository = "https://github.com/tymster/fimsh-type"
license = "AGPL-3.0-only"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
termion = "2.0.1"
